--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,23 +5,27 @@ services:
   db:
     image: postgres:15
     container_name: leetboard_db
-    restart: always
     environment:
+      POSTGRES_DB: leetboard
       POSTGRES_USER: leetuser
       POSTGRES_PASSWORD: leetpass
-      POSTGRES_DB: leetboard
     volumes:
       - pgdata:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    restart: always # makes sure that container restarts if it is crashed
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U leetuser"]
+      interval: 5s
+      timeout: 5s
+      retries: 3 
     ports:
       - "5432:5432"
 
   app:
-    build:
+    # specify image?
+    build: #why?
       context: .
-      dockerfile: Dockerfile
     container_name: leetboard_app
-    depends_on:
-      - db
     ports:
       - "8080:8080"
     environment:
@@ -30,7 +34,16 @@ services:
       DB_USER: leetuser
       DB_PASSWORD: leetpass
       DB_NAME: leetboard
-    command: ["./leetboard", "--port", "8080"]
+    depends_on:
+      db:
+        condition: service_healthy
+    command: ["./1337b04rd", "--port", "8080"]
+    restart: always
+    healthcheck:
+      test: ["CMD", "curl", "--fail", "http://localhost:8080/"]  
+      interval: 5s
+      timeout: 5s
+      retries: 3 
 
 volumes:
   pgdata:
