--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,13 +11,9 @@ services:
       - pgdata:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
       - ./logging:/logging
+      - ./static:/static
     ports:
       - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U leetuser -d leetboard"]
-      interval: 5s
-      timeout: 5s
-      retries: 3 
 
   app:
     build:
@@ -44,12 +40,12 @@ services:
       db:
         condition: service_healthy
     restart: always
-    # healthcheck:
-    #   test: ["CMD", "curl", "--fail", "http://localhost:8080/"]  
-    #   interval: 5s
-    #   timeout: 5s
-    #   retries: 3 
-    #   start_period: 30s
+    healthcheck:
+      test: ["CMD", "curl", "--fail", "http://localhost:8080/"]  
+      interval: 5s
+      timeout: 5s
+      retries: 3 
+      start_period: 30s
 
 volumes:
   pgdata:
