--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,13 @@ services:
       - pgdata:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
       - ./logging:/logging
-      - ./static:/static
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U leetuser -d leetboard"]
+      interval: 5s
+      timeout: 5s
+      retries: 3 
 
   app:
     build:
@@ -36,7 +40,6 @@ services:
     volumes:
       - ./data:/data
       - ./logging:/logging
-      - ./static:/static
     depends_on:
       db:
         condition: service_healthy
