--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - pgdata:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
       - ./logging:/logging
+      - ./static:/static
     ports:
       - "5432:5432"
     healthcheck:
@@ -40,16 +41,11 @@ services:
     volumes:
       - ./data:/data
       - ./logging:/logging
+      - ./static:/static
     depends_on:
       db:
         condition: service_healthy
     restart: always
-    # healthcheck:
-    #   test: ["CMD", "curl", "--fail", "http://localhost:8080/"]  
-    #   interval: 5s
-    #   timeout: 5s
-    #   retries: 3 
-    #   start_period: 30s
 
 volumes:
   pgdata:
